Z-Index Bug Fix

--- a/lambdatimes/src/CSS/index.css
+++ b/lambdatimes/src/CSS/index.css
@@ -164,6 +164,7 @@ body {
   flex-direction: row;
   height: 500px;
   position: relative;
+  z-index: 0;
   overflow: hidden;
   margin-top: 16px;
 }
